--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
     "consistent-return": "warn"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2022
   }
 }
