feat: 새로운 이메일 탬플릿 생성 api 추가 및 파일구조 조금 변경
이메일 탬플릿 생성 api 추가 완료 했습니다.

기존의 정진님 코드 파일구조가 살짝 헷갈리는 부분들이 있어 말씀 드렸고 새롭게 쓰일 파일구조로 사용했습니다.

서비스는 기본적으로 user 독에 접근하면 user.js 로 emailTemplate 독에 접근하면 emailTemplate.js 에 로직을 추가하면 됩니다.

기능 구현에 딱히 어려운 사항은 없었고, 기존의 정진님 코드 구조를 파악하는데 거의 시간이 소요됐습니다.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
-    "consistent-return": "warn"
+    "consistent-return": "warn",
+    "no-underscore-dangle": "off"
   },
   "parserOptions": {
     "ecmaVersion": 2022
