--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
     "consistent-return": "warn",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-unused-vars": "warn"
   }
 }
