--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "0.16.4",
+  "version": "0.17.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
