--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
