--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "server",
-  "version": "0.20.0",
+  "version": "0.20.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "dev": "NODE_ENV=development nodemon ./bin/www",
     "pre-commit": "lint-staged && rm -rf .git/hooks && ln -s ../.husky .git/hooks",
-    "prepare": "husky install && husky add .husky/pre-commit 'npm run pre-commit'"
+    "prepare": "husky install && husky add .husky/pre-commit 'npm run pre-commit'",
+    "test": "DOTENV_CONFIG_PATH=./.env.test jest --watchAll"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -26,12 +27,16 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.1",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "faker": "^6.6.6",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.1.1",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.20"
   },
   "lint-staged": {
