test: authValidation.js 테스트 파일 작성

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "es2022": true,
     "node": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
